packages/typ/tests/fixtures/diagnostics/0018_core_function_application_mismatch_02.ml.infer.expected
File "0018_core_function_application_mismatch_02.ml", line 1:
Warning 24 [bad-module-name]: bad source file name: 0018_core_function_application_mismatch_02 is not a valid module name.

File "0018_core_function_application_mismatch_02.ml", line 2, characters 21-22:
2 | let _ = consume_beta 0
                         ^
Error: The constant 0 has type int but an expression was expected of type
         bool
